syntax = "proto3";

package mockauth;

option go_package = "./mockauth";

service AuthService {
  rpc GetRandomString (AuthRequest) returns (RandomStringResponse);
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message RandomStringResponse {
  string random_string = 1;
}